fix: remove absolute directory

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="shortcut icon" href="/src/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="src/favicon.ico" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kouyu100 | 寄</title>
 </head>
@@ -38,7 +38,7 @@
     </div>
   </div>
   <div id="app"></div>
-  <script type="module" src="/src/main.js"></script>
+  <script type="module" src="src/main.js"></script>
 </body>
 
 </html>
