--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
   </div>
   <div id="app"></div>
-  <script type="module" src="src/main.js"></script>
+  <script type="module" src="./src/main.js"></script>
 </body>
 
 </html>
