--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="shortcut icon" href="src/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/favicon.6a0c2261.ico" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kouyu100 | 寄</title>
+  <script type="module" crossorigin src="./assets/index.b7a931a6.js"></script>
+  <link rel="stylesheet" href="./assets/index.f5888033.css">
 </head>
 
 <body class="mdui-theme-primary-indigo mdui-theme-accent-pink">
@@ -38,7 +40,7 @@
     </div>
   </div>
   <div id="app"></div>
-  <script type="module" src="./src/main.js"></script>
+  
 </body>
 
 </html>
